Upgrade e2e tests to run with junit5
AssertJSwing is no longer maintained and there are no good alternatives.
Therefore, we move to handroled Java native tests.
New compile structure requires updated gitignore.